Updating prototype kit to 7.0.0

--- a/app/views/v1/confirmation--exemption-not-found.html
+++ b/app/views/v1/confirmation--exemption-not-found.html
@@ -66,30 +66,30 @@
 
 
     {{ details({
-      text: 'The details you gave do not match our records',
-      HTML: "<p>If you have recently moved or changed your name, we may have your old information. Change your details then try again.</p><p>If you've never had an exemption from paying NHS costs, we won't have your details.</p>"
+      summaryText: 'The details you gave do not match our records',
+      html: "<p>If you have recently moved or changed your name, we may have your old information. Change your details then try again.</p><p>If you've never had an exemption from paying NHS costs, we won't have your details.</p>"
     }) }}
    
 
     {{ details({
-      text: "You've recently become entitled to help with NHS costs",
-      HTML: '<p>We may not have all your details yet. Our records can take up to 6 weeks to update.</p>'
+      summaryText: "You've recently become entitled to help with NHS costs",
+      html: '<p>We may not have all your details yet. Our records can take up to 6 weeks to update.</p>'
     }) }}
    
     {{ details({
-      text: "You're no longer entitled to help with NHS costs",
-      HTML: '<p>Your eligibility for free NHS treatment may have ended.</p>'
+      summaryText: "You're no longer entitled to help with NHS costs",
+      html: '<p>Your eligibility for free NHS treatment may have ended.</p>'
     }) }}
 
     
     {{ details({
-      text: 'Your prescription prepayment certificate (PPC) has expired',
-      HTML: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online.</a> <span>(Opens in a new tab)</span></p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
+      summaryText: 'Your prescription prepayment certificate (PPC) has expired',
+      html: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online.</a> <span>(Opens in a new tab)</span></p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
     }) }}
 
     {{ details({
-      text: 'You have a hormone replacement therapy prescription prepayment certificate (HRT PPC)',
-      HTML: '<p>Our NHS exemption checker service cannot currently check for an HRT PPC exemption. We aim to change this in the future.</p>'
+      summaryText: 'You have a hormone replacement therapy prescription prepayment certificate (HRT PPC)',
+      html: '<p>Our NHS exemption checker service cannot currently check for an HRT PPC exemption. We aim to change this in the future.</p>'
     }) }}
 
     <h2 class="nhsuk-heading-m">Check if you should be entitled</h2>
