--- a/app/views/v2/verification-code.html
+++ b/app/views/v2/verification-code.html
@@ -31,7 +31,7 @@
 
         <!-- MISSING TEXT MESSAGE -->
         {{ details({
-          text: 'I have not received the text message',
+          summaryText: 'I have not received the text message',
           html: '<p class="nhsuk-body">The text message may take a few minutes to arrive.</p>
                  <p class="nhsuk-body">If it does not arrive, you can <a class="nhsuk-link" href="#">request a new code</a>.</p>
                  <p class="nhsuk-body">Alternatively, the phone number used in applying for your exemption may be incorrect. <a href="#">Contact us</a> for further help.</p>'
@@ -41,7 +41,7 @@
 
         <!-- MISSING EMAIL -->
         {{ details({
-          text: 'I have not received the email',
+          summaryText: 'I have not received the email',
           html: '<p class="nhsuk-body">The email may take a few minutes to arrive. Its subject line is: "Care Identity Authentication One Time Password".</p>
                  <p class="nhsuk-body">Check your spam or junk folder - if it still has not arrived, you can <a class="nhsuk-link" href="#">request a new code</a>.</p>
                  <p class="nhsuk-body">Alternatively, the email address used in applying for your exemption may be incorrect. <a href="#">Contact us</a> for further help.</p>'
