--- a/app/views/v2/verification-method.html
+++ b/app/views/v2/verification-method.html
@@ -38,7 +38,7 @@
       }) }}
 
       {{ details({
-        text: 'I cannot use any of these options',
+        summaryText: 'I cannot use any of these options',
         html: 'If you do not have access to either the mobile phone or email address used in applying for your exemption, you can <a href="#">contact us</a> for further help.</p>'
       }) }}
 
