--- a/app/views/v2/date-of-birth.html
+++ b/app/views/v2/date-of-birth.html
@@ -2,7 +2,7 @@
 
 {% block beforeContent %}
     {{ backLink({
-        text: 'Go back',
+        text: 'Back',
         href: 'javascript:history.back();'
     }) }}
 {% endblock %}
