Adding a link to the HRT PPC confirmation screen.

--- a/app/views/v2/confirmation--exemption-found-hrt-ppc.html
+++ b/app/views/v2/confirmation--exemption-found-hrt-ppc.html
@@ -18,7 +18,7 @@
       type: 'tick',
       headingLevel: 2,
       items: [
-        { item: 'Some NHS prescriptions' } 
+        { item: 'Some NHS prescriptions<br /><a target="_blank" href="https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-hormone-replacement-therapy-prescription-prepayment-certificate-hrt-ppc/medicines-covered-hrt-ppc"><span class="nhsuk-body-s nhsuk-u-margin-bottom-0">List of medications covered (opens in a new tab)</span></a>' } 
       ]
     }) }}
 
