--- a/app/views/v2/exemption--ppc.html
+++ b/app/views/v2/exemption--ppc.html
@@ -10,8 +10,8 @@
     {% set panelHTML %}
       <dl>
          <div>
-             <dd class="nhsuk-body nhsuk-u-margin-0">Certificate number</dd>
-             <dt class="nhsuk-heading-l">8436 810 379</dt>
+             <dd class="nhsuk-body nhsuk-u-margin-0">Certificate reference</dd>
+             <dt class="nhsuk-heading-l">PPC 34FR SD28</dt>
          </div>
          <div>
              <dd class="nhsuk-body nhsuk-u-margin-0">Exemption ends</dd>
@@ -21,7 +21,7 @@
     {% endset %}
 
     {{ panel({
-      titleText: 'You currently have a maternity exemption',
+      titleText: 'You currently have a Prescription Prepayment Certificate (PPC)',
        html: panelHTML
     }) }}
 
@@ -30,8 +30,7 @@
       type: 'tick',
       headingLevel: 2,
       items: [
-        { item: 'NHS prescriptions' },
-        { item: 'NHS dental check-ups and treatment' }    
+        { item: 'NHS prescriptions' }  
       ]
     }) }}
 
@@ -76,15 +75,6 @@
           actions: {
             items: [
               { href: '#', text: 'Change', visuallyHiddenText: 'address' }
-            ]
-          }
-        },
-        {
-          key: { text: "Due date or baby's birth date" },
-          value: { text: -9 | alterTodaysDateByNumberOfMonths },
-          actions: {
-            items: [
-              { href: '#', text: 'Change', visuallyHiddenText: 'full name' }
             ]
           }
         },
@@ -144,24 +134,10 @@
 
     <h2 class="nhsuk-heading-m">How to get your help</h2>
 
-    <h3 class="nhsuk-heading-s">Collecting prescriptions</h3>
-    <p class="nhsuk-body">Pharmacy staff will ask for your maternity exemption details. If you have them, your pharmacist will tick box D on the prescription. If you do not have them with you, they should tick 'Evidence not seen'. They will not charge you.</p>
-    <p class="nhsuk-body">You can show this page as proof today.</p>
 
-    <h3 class="nhsuk-heading-s">Dental check-ups and treatment</h3>
-    <p class="nhsuk-body">At your dental practice you'll be given a form to fill out.</p>
-    <p class="nhsuk-body">Put a cross (X) in the relevant box and write your certificate number on the form if you:</p>
-
-    <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>have a valid HC2 certificate</li>
-      <li>are pregnant</li>
-      <li>have had a baby in the last 12 months</li>
-    </ul>
-
-    <p class="nhsuk-body">Your dentist may ask to see proof of your entitlement.</p>
-    <p class="nhsuk-body">You can show this page as proof today.</p>
-    <p class="nhsuk-body">Find out what <a href="https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/maternity-exemption-certificates">help you can get for dental treatment if you have a maternity
-        exemption certificate</a></p>
+   <h3 class="nhsuk-heading-s">Collecting prescriptions</h3>
+    <p class="nhsuk-body">Pharmacy staff will ask for your Prescription Prepayment Certificate details. If you have them, your pharmacist will tick box F on the prescription. If you do not have them with you, they should tick 'Evidence not seen'. They will not charge you.</p>
+    
 
     <p class="nhsuk-body"><a href="#">Print this</a></p>
 
