--- a/app/views/v1/start.html
+++ b/app/views/v1/start.html
@@ -41,6 +41,9 @@
 
     <p class="nhsuk-body">We cannot check prescription exemption certificates issued by the Ministry of Defence. <a href="https://www.gov.uk/guidance/war-pensioners-other-help-you-may-be-entitled-to#prescription-exemption-certificates">More information on these certificates can be found at GOV.UK</a>.</p>
 
+    <p class="nhsuk-body">We also cannot check if you are entitled to help with your health costs due to the benefit you are getting. 
+      If you are not sure if the benefit you get entitles you to help use our <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help">Check if you're eligible service</a>.</p>
+
     <h2 class="nhsuk-heading-l">When you do not need to check</h2>
 
     <p class="nhsuk-body">You're automatically entitled to free NHS prescriptions and NHS dental treatment if you are:</p>
