updated v2 signposting excluded cohorts content; omitted the HRT PPC line in confirmation page details component

--- a/app/views/v1/confirmation--exemption-not-found.html
+++ b/app/views/v1/confirmation--exemption-not-found.html
@@ -51,7 +51,7 @@
         text: 'Postcode'
       },
       value: {
-        text: data.addressPostcode
+        text: data.addressPostcode or 'NE15 8NY'
       },
       actions: {
         items: [
@@ -98,7 +98,7 @@
               <ul>
                 <li>have an HC3 certificate (partial help through Low Income Scheme)</li>
                 <li>have a Hormone Replacement Therapy PPC</li>
-                <li>have a prescription exemption certificate issued by the ministry of defence</li>
+                <li>have a prescription exemption certificate issued by the Ministry of Defence</li>
                 <li>are entitled to help due to the benefit you are getting</li>
               </ul>
               <p>If you want to check if you are entitled to help due to any of these reasons, <a href="https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption">find out more about how to check on our website</a>.</p>'
