--- a/app/views/v2/confirmation--exemption-not-found.html
+++ b/app/views/v2/confirmation--exemption-not-found.html
@@ -8,7 +8,7 @@
 
 
      {{ panel({
-      titleText: 'We cannot match you to our records'
+      titleText: 'We cannot find an exemption certificate with these details'
     }) }}
 
      {{ list({
@@ -100,6 +100,18 @@
     {{ details({
       summaryText: 'Your prescription prepayment certificate (PPC) has expired',
       html: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online.</a> <span>(Opens in a new tab)</span></p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
+    }) }}
+
+
+    {{ details({
+      summaryText: 'You have an exemption we cannot check',
+      html: '<p>This service cannot currently check if you are entitled to help with health costs because you:</p>
+              <ul>
+                <li>have an HC3 certificate (partial help through Low Income Scheme)</li>
+                <li>have a prescription exemption certificate issued by the Ministry of Defence</li>
+                <li>are entitled to help due to the benefit you are getting</li>
+              </ul>
+              <p>If you want to check if you are entitled to help due to any of these reasons, <a href="https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption">find out more about how to check on our website</a>.</p>'
     }) }}
 
     
