updated "Your prescription prepayment certificate (PPC) has expired" details component content

--- a/app/views/v1/confirmation--exemption-not-found.html
+++ b/app/views/v1/confirmation--exemption-not-found.html
@@ -89,7 +89,7 @@
     
     {{ details({
       summaryText: 'Your prescription prepayment certificate (PPC) has expired',
-      html: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online.</a> <span>(Opens in a new tab)</span></p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
+      html: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online</a>.</p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
     }) }}
 
     {{ details({
