Bullet wording changed.

--- a/app/views/v2/confirmation--exemption-not-found.html
+++ b/app/views/v2/confirmation--exemption-not-found.html
@@ -114,7 +114,7 @@
       summaryText: 'You have an exemption we cannot check',
       html: '<p>This service cannot currently check if you are entitled to help with health costs because you:</p>
               <ul>
-                <li>have an HC3 certificate (partial help through Low Income Scheme)</li>
+                <li>have a certificate for partial help with health costs (HC3)</li>
                 <li>have a prescription exemption certificate issued by the Ministry of Defence</li>
                 <li>are entitled to help due to the benefit you are getting</li>
               </ul>
