--- a/app/views/v2/confirmation--exemption-not-found.html
+++ b/app/views/v2/confirmation--exemption-not-found.html
@@ -115,7 +115,7 @@
       html: '<p>This service cannot currently check if you are entitled to help with health costs because you:</p>
               <ul>
                 <li>have a certificate for partial help with health costs (HC3)</li>
-                <li>have a prescription exemption certificate issued by the Ministry of Defence</li>
+                <li>have a prescription exemption certificate issued by Veterans UK</li>
               </ul>
               <p>If you want to check if you are entitled to help due to any of these reasons, <a href="https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption">find out more about how to check on our website</a>.</p>'
     }) }}
