Updating the start page for benefits only.

--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -21,29 +21,30 @@
 
     <h3 class="nhsuk-heading-m">Exemptions you can check</h3>
 
+    <p class="nhsuk-list">You can use this service to check if you have a:</p>
+
     <ul class="nhsuk-list nhsuk-list--bullet">
-      <li> NHS Prescription Prepayment Certificate (PPC)</li>
+      <li>NHS Prescription Prepayment Certificate (PPC)</li>
       <li>medical exemption certificate</li>
       <li>maternity exemption certificate</li>
-      <li>HC2 certificate (full help through the NHS Low Income Scheme)</li>
-      <li>Hormone Replacement Therapy Prescription Prepayment Certificate (HRT PPC)</li>
+      <li>certificate for full help with health costs (HC2)</li>
+      <li>exemptions because of any benefits you get</li>
     </ul>
 
-    <p class="nhsuk-body">This result can only be used as proof today. You'll need to check this service each time you want to use it as proof.</p>
+    <p class="nhsuk-body">We share some of the information you give us with the Department for Work and Pensions. This helps us to check if you’re already exempt because of any benefits you get. If you’re not sure if your benefit entitles you to help, you can <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help">check if you're eligible</a>.</p>
+    <p class="nhsuk-body">You can only use this result as proof today. You'll need to check this service each time you want to use it as proof.</p>
+    
 
-    <h3 class="nhsuk-heading-m">Exemptions you cannot currently check</h3>
+    <h3 class="nhsuk-heading-m">Exemptions you cannot check</h3>
+    <p class="nhsuk-body">You cannot use this service to check if you have a:</p>
 
     <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>HC3 certificate (partial help through the NHS Low Income Scheme)</li>
+      <li>certificate for partial help with health costs (HC3)</li>
+      <li>Hormone Replacement Therapy Prescription Prepayment Certificate (HRT PPC) </li>
     </ul>
 
-    <p class="nhsuk-body"> <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you think you may have one of these certificates and want to check if it is still valid</a>.</p>
-
-    <p class="nhsuk-body">We cannot check prescription exemption certificates issued by the Ministry of Defence. <a href="https://www.gov.uk/guidance/war-pensioners-other-help-you-may-be-entitled-to#prescription-exemption-certificates">More information on these certificates can be found at GOV.UK</a>.</p>
-
-    <p class="nhsuk-body">We also cannot check if you are entitled to help with your health costs due to the benefit you are getting. 
-      If you are not sure if the benefit you get entitles you to help use our <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help">Check if you're eligible service</a>.
-    </p>
+    <p class="nhsuk-body"><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you think you may have one of these certificates and want to check if it is still valid</a>.</p>
+    <p class="nhsuk-body">We cannot check prescription exemption certificates issued by Veterans UK. <a href="https://www.gov.uk/guidance/war-pensioners-other-help-you-may-be-entitled-to#prescription-exemption-certificates">Find out more about these certificates and other help you may be able to get</a>.</p>
 
     <h2 class="nhsuk-heading-l">When you do not need to check</h2>
 
@@ -52,9 +53,8 @@
     <ul class="nhsuk-list nhsuk-list--bullet">
       <li>under 16</li>
       <li>16, 17 or 18 and in full time education</li>
-      <li>getting <a class="nhsuk-link" href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits"
-          target="_blank" rel="noopener" aria-label="certain benefits (opens in a new tab)">certain benefits</a> or you're named on the claim as a partner or child
-      </li>
+      <li>getting <a class="nhsuk-link" href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits" target="_blank" rel="noopener" aria-label="certain benefits (opens in a new tab)">certain benefits</a> or you're named on the claim as a partner or child</li>
+      <li>aged 60 or over</li>
     </ul>
 
     {{ button({
