--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -54,8 +54,9 @@
       <li>under 16</li>
       <li>16, 17 or 18 and in full time education</li>
       <li>getting <a class="nhsuk-link" href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits" target="_blank" rel="noopener" aria-label="certain benefits (opens in a new tab)">certain benefits</a> or you're named on the claim as a partner or child</li>
-      <li>aged 60 or over</li>
     </ul>
+
+    <p>If you're aged 60 or over, you get free NHS prescriptions and NHS sight tests.</p>
 
     {{ button({
       text: 'Start now',
